new branch commit

--- a/exercise1.erb
+++ b/exercise1.erb
@@ -3,7 +3,7 @@ require 'net/http'
 def apiCall(mainURL)
 
     url = URI.parse(mainURL)
-    # puts url.class
+    puts url.class
     # puts url
     # req = Net::HTTP::Get.new(url.to_s)
     response =  Net::HTTP.get(url)
