--- a/exercise1.erb
+++ b/exercise1.erb
@@ -7,7 +7,7 @@ def apiCall(mainURL)
     response =  Net::HTTP.get(url)
     return response
 end
-# puts apiCall('http://www.example.com/index.html')
+puts apiCall('http://www.example.com/index.html')
 module Gfg
    
     
